src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__variable_shadowing_assignment.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
let a = 1
let a = 2
a = 3


OK
.fn @main
  params 0
  stack 2
  .locals
    a = r1
  .code
  0  lsmi r1, 1
  1  lsmi r1, 2
  2  lsmi r1, 3
  3  lnil r0
  4  ret
