src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__variable_use.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
do {
let a = 1
a
}

OK
.fn @main
  params 0
  stack 2
  .locals
    a = r1
  .code
  0  lsmi r1, 1
  1  retv r1
