src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__while_comparison_le.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
do {
//
let i = 0
while i <= 5 {
  i = i + 1
}
}

OK
.fn @main
  params 0
  stack 4
  .locals
    i = r1
  .code
  0  lsmi r1, 0
  1  lsmi r3, 5
  2  isle r1, r3
  3  jmp 3   ; to 6
  4  add r1, r1, 1
  5  jmp -4   ; to 1
  6  lnil r0
  7  ret
